adding preview processor

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ javaTarget = "11"
 kotlin = "2.0.20"
 kotlinCompileTesting = "1.5.0"
 kotlinPoet = "1.18.1"
+kotlinPoet = "1.16.0"
 ksp = "2.0.20-1.0.24"
 layoutlib = "14.0.9"
 moshi = "1.15.1"
