--- a/paparazzi-annotations/build.gradle
+++ b/paparazzi-annotations/build.gradle
@@ -1,2 +1,9 @@
 apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'com.vanniktech.maven.publish'
+apply plugin: 'aar2jar'
+
+aar2jar.configureForConfiguration("compileOnly")
+
+dependencies {
+  compileOnlyAarAsJar libs.compose.runtime
+}
