adding plugin extension stub

--- a/paparazzi-annotations/build.gradle
+++ b/paparazzi-annotations/build.gradle
@@ -1,3 +1,7 @@
 apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'org.jetbrains.kotlin.plugin.compose'
 apply plugin: 'com.vanniktech.maven.publish'
+
+dependencies {
+  implementation libs.compose.runtime
+}
