--- a/paparazzi-gradle-plugin/src/test/projects/preview-annotation-dsl-disable/build.gradle
+++ b/paparazzi-gradle-plugin/src/test/projects/preview-annotation-dsl-disable/build.gradle
@@ -21,6 +21,9 @@ android {
   buildFeatures {
     compose true
   }
+  composeOptions {
+    kotlinCompilerExtensionVersion libs.versions.composeCompiler.get()
+  }
 }
 
 dependencies {
