--- a/paparazzi-gradle-plugin/build.gradle
+++ b/paparazzi-gradle-plugin/build.gradle
@@ -41,6 +41,7 @@ dependencies {
   implementation libs.moshi.core
   implementation libs.moshi.adapters
   implementation libs.moshi.kotlinReflect
+  implementation files(libs.class.superclass.protectionDomain.codeSource.location)
 
   testImplementation libs.junit
   testImplementation libs.truth
