--- a/paparazzi-gradle-plugin/src/test/projects/preview-annotation-dsl-disable/build.gradle
+++ b/paparazzi-gradle-plugin/src/test/projects/preview-annotation-dsl-disable/build.gradle
@@ -1,7 +1,8 @@
 plugins {
+  id 'app.cash.paparazzi'
   id 'com.android.library'
   id 'kotlin-android'
-  id 'app.cash.paparazzi'
+  id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 paparazzi {
@@ -24,14 +25,9 @@ android {
   buildFeatures {
     compose true
   }
-  composeOptions {
-    kotlinCompilerExtensionVersion libs.versions.composeCompiler.get()
-  }
 }
 
 dependencies {
   implementation libs.composeUi.material
   implementation libs.composeUi.uiTooling
 }
-
-apply from: '../guava-fix.gradle'
