Add preview param support

--- a/paparazzi-preview-test-junit/build.gradle
+++ b/paparazzi-preview-test-junit/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'org.jetbrains.kotlin.plugin.compose'
 apply plugin: 'com.vanniktech.maven.publish'
+apply plugin: 'aar2jar'
+
+aar2jar.configureForConfiguration("compileOnly")
 
 dependencies {
   compileOnly libs.compose.runtime
+  compileOnlyAarAsJar libs.composeUi.foundation
   implementation projects.paparazzi
   implementation projects.paparazziAnnotations
   api libs.testParameterInjector
