--- a/paparazzi-annotations/build.gradle
+++ b/paparazzi-annotations/build.gradle
@@ -4,4 +4,5 @@ apply plugin: 'com.vanniktech.maven.publish'
 
 dependencies {
   compileOnly libs.compose.runtime
+  compileOnly libs.tools.layoutlib
 }
