--- a/paparazzi-annotations/build.gradle
+++ b/paparazzi-annotations/build.gradle
@@ -3,5 +3,5 @@ apply plugin: 'org.jetbrains.kotlin.plugin.compose'
 apply plugin: 'com.vanniktech.maven.publish'
 
 dependencies {
-  implementation libs.compose.runtime
+  compileOnly libs.compose.runtime
 }
