Add unit tests for ksp processor

--- a/paparazzi-preview-processor/build.gradle
+++ b/paparazzi-preview-processor/build.gradle
@@ -5,4 +5,9 @@ dependencies {
   implementation libs.kotlinpoet
   implementation libs.kotlinpoet.ksp
   implementation libs.ksp
+
+  testImplementation libs.junit
+  testImplementation libs.truth
+  testImplementation libs.kotlin.compile.testing
+  testImplementation libs.kotlin.compile.testing.ksp
 }
