--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'org.jetbrains.kotlin.android'
 apply plugin: 'org.jetbrains.kotlin.plugin.compose'
 apply plugin: 'app.cash.paparazzi'
-apply plugin: 'jacoco'
+//apply plugin: 'jacoco'
 
 android {
   namespace 'app.cash.paparazzi.sample'
